# sotto

./: Makefile  README.md  config.toml  pyproject.toml
docs/superpowers/plans/: 2026-07-23-sotto.md
docs/superpowers/specs/: 2026-07-23-sotto-design.md
scripts/: com.robertyuen.sotto.plist.template  install_launch_agent.sh
sotto/: __init__.py  __main__.py  app.py  asr.py  cleanup.py  config.py  fsm.py  injector.py  recorder.py  sounds.py  tap.py
tests/: test_cleanup_guard.py  test_config.py  test_fsm.py  test_injector.py
