[project]
name = "sotto"
version = "0.1.0"
description = "Local push-to-talk dictation for macOS"
requires-python = ">=3.12"
dependencies = [
    "parakeet-mlx>=0.3",
    "mlx-lm>=0.31",
    "sounddevice>=0.5",
    "rumps>=0.4",
    "pyobjc-framework-Quartz>=10.0",
    "pyobjc-framework-Cocoa>=10.0",
]

[dependency-groups]
dev = ["pytest>=8.0"]
